######## Process this file with autoconf to produce a configure script.
dnl
AC_PREREQ(2.13)
AC_INIT(README)
AM_INIT_AUTOMAKE(velatron, 0.0.4)
SDL_VERSION=1.1.5

######## Detect the canonical host and target build environment
AC_CANONICAL_HOST
AC_CANONICAL_TARGET

######## Check for tools
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_RANLIB

######## Check for compiler environment
AC_C_CONST

######## Figure out which math library to use
case "$target" in
*-*-mingw32*)
	LIBS="$LIBS -lwsock32"
	MATHLIB=""
	;;
*-*-beos*)
	MATHLIB=""
	;;
*)
	MATHLIB="-lm"
	;;
esac
AC_SUBST(MATHLIB)

######## Check for SDL
AM_PATH_SDL($SDL_VERSION,
	:,
	AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!])
)

######## Just some defs to speed up my cross compiling
#CFLAGS="$CFLAGS -I/usr/cross-tools/include"

######## Check for headers
AC_CHECK_HEADERS(png.h, , AC_MSG_ERROR(Your system is missing png.h! You will probably have to install the png-devel package))
AC_CHECK_HEADERS(zlib.h, , AC_MSG_ERROR(Your system is missing zlib.h! You will probably have to install the zlib-devel package))
AC_CHECK_HEADERS(math.h, , AC_MSG_ERROR(Your system is missing math.h! ))

######## Check for other libs
AC_CHECK_LIB(z, main, , AC_MSG_ERROR(Your system is missing libz!))
AC_CHECK_LIB(m, main, , AC_MSG_ERROR(Your system is missing libm!))
AC_CHECK_LIB(png, main, , AC_MSG_ERROR(Your system is missing libpng!))

AC_CHECK_LIB(SDL_mixer, main, SOUND="-lSDL_mixer";CFLAGS="$CFLAGS -DUSE_SOUND", , SDL)
#if $MIXER_INCLUDED; then
#	SOUND="-lSDL_mixer -Imixer"
#	CFLAGS="$CFLAGS -DUSE_SOUND -Imixer";
#fi 


######## Set compiler flags and libraries
CFLAGS="$CFLAGS $SDL_CFLAGS -DDATADIR=\"\\\"$datadir/castle-combat\\\"\" -Wall"
#LIBS="$SDL_LIBS -lSDL_net -lSDL -lm $LIBS"
LIBS="$SDL_LIBS -lSDL -lSDL_image -lSDL_gfx $LIBS"

AC_SUBST(SOUND)

######## Finally create all the generated files
AC_OUTPUT([
	Makefile
	src/Makefile
	data/Makefile
])
