bin_PROGRAMS = velatron

velatron_LDADD = -lz -lpng @SOUND@

velatron_SOURCES = \
	cell.cpp cell.h \
	cellfactory.cpp cellfactory.h celltypes.h \
	coord.cpp coord.h \
	creature.cpp creature.h \
	cursor.cpp \
	game.cpp game.h \
	globals.h \
	ground.h ground.cpp \
	image.cpp image.h \
	item.cpp item.h \
	main.cpp \
	map.cpp map.h \
	#
